# unifleet-v2-webapp

./: .dockerignore  .env.example  .gitignore  .replit  APP_REPORT.md  Dockerfile  Dockerfile.backup  Makefile  README.md  audit_log.py  data_paths.py  discount_store.py  docker-compose.test.yml  docker-compose.yml  generate_voucher.py  main.py  models.py  persistence.py  price_store.py  pyproject.toml  railway.toml  replit.nix  report_pdf.py  rw.txt  sanity_app.py
archive/unused_2025-10-07/: import_csv_to_db.py  supplier_export.csv
data/: customers.csv  master_vouchers.csv  ops_audit_log.csv  price_history.csv  requested_vouchers.csv  station_prices.json  station_prices.json.runtime.bak  stations.csv  supplier_export.csv
data/legacy/: unifleet.db
data/presets/: HARR_presets.csv
db/: apply.py  pool.py  postgres_repo.py  schema.sql  seed_prices.sql  seed_stations.sql
docs/: f1.1-verification-log.md  quickref.md  runbook.md
scripts/: backup_postgres.py  migrate_to_postgres.py  provision_railway.sh  restore_csv_data.py  run_f1_1_verifications.sh  verify_build.py
static/: styles.css
templates/: admin_prices.html  book.html  booking_success.html  form.html  redeem.html  register.html  register_success.html  voucher_image.html
tests/: conftest.py  test_apply.py  test_data_paths.py  test_persistence.py  test_postgres_repo.py  test_postgres_repo_integration.py  test_railway_toml.py  test_sanity_app.py  test_schema.py  test_seeds.py  test_verify_build.py
tools/: sync_stations_from_csv.py
uploads/: unifleet_web_redemptions_input.csv
(+13 files in other folders)
